# autonomous-research-agent

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.MD  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: agent.py  guardrails.py  memory.py  planner.py
app/tools/: base.py  calculator.py  prompts.py  web_fetch.py  web_search.py
app/utils/: config.py  observability.py
cli/: client.py
docs/: threat_model.MD
eval/: benchmarks.py  scoring.py
eval/tasks/: fact_collection.py  web_search.py
scripts/: demo.py
tests/: conftest.py  test_agent.py  test_tools.py
