[tool.poetry]
name = "autonomous-research-agent"
version = "0.1.0"
description = "Production-grade autonomous research agent with safety guardrails"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^0.0.350"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.8"
instructor = "^0.4.0"
openai = "^1.3.0"
transformers = "^4.36.0"
torch = "^2.1.0"
requests = "^2.31.0"
playwright = "^1.40.0"
duckduckgo-search = "^3.9.0"
sqlalchemy = "^2.0.23"
sqlite3 = "*"
markdownify = "^0.11.6"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-auto-instrumentation = "^0.42b0"
structlog = "^23.2.0"
typer = "^0.9.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
ruff = "^0.1.6"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
agent = "cli.client:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=html --cov-report=term-missing --cov-fail-under=85"
